Unauthorized Accesses have been implemented without login. After login, Teams page now rendering the teams correctly.

--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -16,9 +16,9 @@ body {
     color: #ffffff;
     box-shadow: 0 0 7px black;
     border: 2px solid black;
-/*  min-height: 70vh;
-    hogy leerjen az aljara a footer
-*/
+    min-height: 70vh;
+
+
 }
 
 /* Profile Info */
